# mnemos

./: .gitignore  LICENSE  NEXT_STEPS.md  README.md  SPEC.md  pyproject.toml
src/mnemos/: __init__.py  protocol.py  types.py
src/mnemos/baselines/: __init__.py
src/mnemos/evals/: __init__.py
src/mnemos/personas/: __init__.py  generate.py  templates.py
src/mnemos/probes/: __init__.py  generate.py  templates.py
src/mnemos/traces/: __init__.py  cli.py  disclosure.py  generate.py  llm.py  prompts.py
tests/: test_disclosure.py  test_persona_generate.py  test_probe_generate.py  test_trace_generate.py  test_types.py
