[project]
name = "mnemos"
version = "0.1.0"
description = "A benchmark for long-horizon memory in conversational agents."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Avik Malladi" }]
keywords = ["agents", "llm", "memory", "evaluation", "benchmark"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "anthropic>=0.40.0",
  "numpy>=1.26",
  "pydantic>=2.6",
  "tqdm>=4.66",
]

[project.optional-dependencies]
vector = ["faiss-cpu>=1.8"]
dev = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.10"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
